Pods/configmap-demo.yaml

apiVersion: v1
kind: Service
metadata:
  name: simple-flask-service
spec:
  type: NodePort
  selector:
    project: simple-flask
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30001
