Pods/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-flask
  labels:
    name: simple-flask
spec:
  replicas: 3
  selector:
    matchLabels:
      name: simple-flask
  template:
    metadata:
      name: simple-flask
      labels:
        name: simple-flask
    spec:
      containers:
        - name: simple-flask
          image: localhost:5000/simple-flask:latest
          resources:
            limits:
              memory: "64Mi"
              cpu: "100m"
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: simple-flask-service
spec:
  type: NodePort
  selector:
    name: simple-flask
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30001
