Pods/external-services-with-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
  labels:
    project: external-service
spec:
  type: ExternalName
  externalName: example.com
  ports:
    - port: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: curl
  labels:
    project: external-service
spec:
  containers:
    - name: curl
      image: localhost:5000/curl:latest
      resources:
        limits:
          memory: "100Mi"
          cpu: "100m"
