Pods/node-port-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: node-port-service
spec:
  type: NodePort
  selector:
    project: node-port-service
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001
