Pods/probes.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project1

---

apiVersion: v1
kind: Pod
metadata:
  name: probescurl
  namespace: project1
  labels:
    project: probesdemo
spec:
  containers:
    - name: curl
      image: localhost:5000/curl:latest
      resources:
        limits:
          memory: "64Mi"
          cpu: "100m"

---

apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: project1
  labels:
    project: probesdemo
spec:
  selector:
    name: probesflask # This label should match the pod label
  ports:
    - port: 8080
      targetPort: 8080

---

apiVersion: v1
kind: Pod
metadata:
  name: probesflask
  namespace: project1
  labels:
    name: probesflask
    project: probesdemo
  annotations:
    description: this is just a personal project
spec:
  containers:
    - name: probesflask
      image: localhost:5000/probesflask:latest
      resources:
        limits:
          memory: "100Mi"
          cpu: "300m"
      ports:
        - containerPort: 8080
      livenessProbe:
        httpGet:
          path: /health
          port: 8080
        initialDelaySeconds: 0
        periodSeconds: 10
        timeoutSeconds: 1
        successThreshold: 1
        failureThreshold: 3
