Pods/secret.yaml

apiVersion: v1
kind: Service
metadata:
  name: simple-flask-service
spec:
  type: NodePort
  selector:
    name: simple-flask
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30001
