Pods/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    name: nginx # -> this must same with pod label
  ports:
    - port: 8080
      targetPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: curl
  labels:
    name: curl
spec:
  containers:
    - name: curl
      image: ashryramadhan10/nginx-curl:latest
      resources:
            limits:
              memory: "64Mi"
              cpu: "100m"
